ajout de commentaires utils pour la compréhension du fichier CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,18 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+/* Pour éviter le soulignement des anchors */
 a {
   text-decoration: none;
 }
 
+/* partie où est renseignée la geolocalisation de l'utilisateur */
 .user-location {
   background-color: #EAEAEA;
   padding: 40px;
 }
 
+/* logo de la marque en tête de page */
 .logo-ohmyfood {
   width: 50%;
   margin: 40px auto;
@@ -20,40 +23,48 @@ a {
   height: auto;
 }
 
+/* logo point de géolocalisation à côté de la location de l'utilisateur */
 .map-logo {
   margin-right: 40px;
 }
 
+/* texte du lieu de géolocalisation */
 .paragraph {
   text-align: center;
   font-weight: bold;
   font-size: 15px;
 }
 
+/* texte de la partie fonctionnement */
 .paragraph-fonct {
   font-size: 45px;
   font-weight: bold;
   display: flex;
 }
 
+/* bloc "réservez le menu qui vous convient" */
 .reservation-menu {
   background-color: #F6F6F6;
   padding: 122px 30px;
   text-align: center;
 }
 
+/* texte dans le bloc du dessus */
 .site-presentation {
   margin: 50px 0;
 }
 
+/* titre de la page */
 h1 {
   margin-top: 0;
 }
 
+/* sous-titres de la page */
 h2 {
   margin-bottom: 50px;
 }
 
+/* Bouton "explorez nos restaurants" */
 .restaurant-list-button {
   background-image: linear-gradient(to top left, #AB5EDB, #E972DA);
   border-radius: 100px;
@@ -66,10 +77,12 @@ h2 {
   box-shadow: 0px 0px 0px 0px rgb(0 0 0 / 0%), 0 38px 33px 0 rgb(0 0 0 / 20%);
 }
 
+/* bloc expliquant le fonctionnement */
 .fonctionnement {
   margin: 120px 5%;
 }
 
+/* étape du fonctionnement */
 .step {
   padding: 50px 0;
   margin: 50px 0 50px 42px;
@@ -78,6 +91,7 @@ h2 {
   box-shadow: 0px 0px 0px 0px rgb(0 0 0 / 0%), 0 11px 26px 0 rgb(0 0 0 / 20%);
 }
 
+/* numéro des étapes du fonctionnement */
 .step-number {
   background-color: #9356DC;
   margin: auto 0;
@@ -88,17 +102,19 @@ h2 {
   left: -41px;
 }
 
+/* logo pour chaque étape de fonctionnement */
 .step-logo {
   color: #838383;
   margin: auto 28px;
 }
 
-
+/* bloc liste des restaurants  */
 .restaurant-list {
   padding: 122px 5%;
   background-color: #F6F6F6;
 }
 
+/* bloc div pour un restaurant */
 .restaurant {
   border-radius: 50px;
   padding-bottom: 25px;
@@ -106,6 +122,7 @@ h2 {
   box-shadow: 0px 0px 0px 0px rgb(0 0 0 / 0%), 0 11px 26px 0 rgb(0 0 0 / 20%);
 }
 
+/* vignette "Nouveau" en haut à droite de l'image d'un resto */
 .new {
   position: absolute;
   right: 100px;
@@ -117,6 +134,7 @@ h2 {
   border-radius: 12px;
 }
 
+/* réglage général des images */
 img {
   border-radius: 50px 50px 0 0;
   width: 100%;
@@ -124,38 +142,46 @@ img {
   object-fit: cover;
 }
 
+/* Mise en page flex pour aligner le nom du restaurant et le logo coeur */
 .restaurant-details-flexbox {
   display: flex;
   justify-content: space-between;
 }
 
+/* bloc du nom de restaurant + localisation */
 .restaurant-descr {
   margin-left: 20px;
   font-size: 47px;
 }
 
+/* nom du restaurant sur index.html */
 .restaurant-descr h3 {
   margin: 15px 0;
 }
 
+/* lieu du restaurant sur index.html */
 .restaurant-descr p {
   margin: 15px 0;
 }
 
+/* bouton "j'aime" en forme de coeur */
 .heart-logo {
   margin: 42px;
 }
 
+/* bouton "j'aime" en forme de coeur coloré au moment du clic*/
 .heart-logo-colored {
   margin: 42px;
 }
 
+/* Div à l'intérieur duquel se trouve le logo de coeur */
 .div-heart-logo {
   background: darkslategrey;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
+/* détail de la manip à revoir - DEBUT */
 .div-heart-logo:hover .heart-logo,
 .div-heart-logo .heart-logo-colored {
   display: none;
@@ -170,7 +196,9 @@ img {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+/* détail de la manip à revoir - FIN */
 
+/* pied de page */
 footer {
   background-color: #353535;
   color: white;
@@ -178,22 +206,27 @@ footer {
   font-size: 45px;
 }
 
+/* pour remédier à un souci de font-size sur la page index-html */
 .footer-main-page {
   font-size: 29px;
 }
 
+/* les logos présents dans le pied de page */
 .footer-logo {
   color: white;
   margin-right: 15px;
 }
 
 
-/* Menu à la française */
+/* A partir d'ici : réglages des pages menu des restaurants */
+
+/* image d'accueil page du restaurant */
 .image-presentation {
   width: 100%;
   border-radius: 0;
 }
 
+/* bloc menu du restaurant */
 .restaurant-menu {
   position: relative;
   background-color: #F6F6F6;
@@ -202,11 +235,13 @@ footer {
   border-radius: 100px 100px 0 0;
 }
 
+/* nom du restaurant et coeur à côté sur la page du menu du restaurant */
 .restaurant-name-heart-logo {
   display: flex;
   z-index: 1;
 }
 
+/* nom du restaurant sur la page du menu du restaurant */
 .restaurant-name {
   font-size: 43px;
   font-style: italic;
