--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
@@ -18,6 +19,18 @@ a {
   display: block;
   border-radius: 0;
   height: auto;
+}
+
+.logo-ohmyfood-section-menu-page {
+  display: flex;
+}
+
+.fa-arrow-left {
+  color: black;
+}
+
+.arrow-margin {
+  margin: auto 0px;
 }
 
 .map-logo {
@@ -63,12 +76,17 @@ h2 {
   background-image: linear-gradient(to top left, #AB5EDB, #E972DA);
   border-radius: 100px;
   color: white;
-  padding: 18px 25px;
+  padding: 14px 19px;
   text-decoration: none;
   display: inline-block;
   font-size: 15px;
   font-weight: bold;
   box-shadow: 0px 0px 0px 0px rgb(0 0 0 / 0%), 0 8px 6px 0 rgb(0 0 0 / 20%);
+}
+
+.order-button-design {
+  padding: 33px 62px;
+  font-size: 35px;
 }
 
 .fonctionnement {
@@ -193,7 +211,7 @@ footer {
 }
 
 .footer-main-page {
-  font-size: 29px;
+  font-size: 17px;
 }
 
 .footer-logo {
@@ -205,6 +223,7 @@ footer {
 /* Menu à la française */
 .image-presentation {
   width: 100%;
+  height: 500px;
   border-radius: 0;
 }
 
