--- a/css/styles.css
+++ b/css/styles.css
@@ -175,11 +175,11 @@ img {
 }
 
 .heart-logo {
-  margin: 0px 9px 0 0;
+  margin: 10px 9px 0 0;
 }
 
 .heart-logo-colored {
-  margin: 0px 9px 0 0;
+  margin: 10px 9px 0 0;
 }
 
 .div-heart-logo {
@@ -217,6 +217,10 @@ footer {
 .footer-logo {
   color: white;
   margin-right: 15px;
+}
+
+footer > a {
+  color: white;
 }
 
 
@@ -387,3 +391,4 @@ footer {
   animation: appearing-menu 1s forwards;
   animation-delay: 0.6s;
 }
+
