--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
@@ -192,14 +191,14 @@ img {
 .div-heart-logo:hover .heart-logo,
 .div-heart-logo .heart-logo-colored {
   display: none;
-  background: linear-gradient(to bottom, #e72c83 0%,#a742c6 100%);
+  background: linear-gradient(to bottom, #e72c83 0%, #a742c6 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .div-heart-logo:hover .heart-logo-colored {
   display: block;
-  background: linear-gradient(to bottom, #e72c83 0%,#a742c6 100%);
+  background: linear-gradient(to bottom, #e72c83 0%, #a742c6 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -220,7 +219,7 @@ footer {
   margin-right: 15px;
 }
 
-footer > a {
+footer>a {
   color: white;
 }
 
@@ -306,7 +305,7 @@ footer > a {
   white-space: nowrap;
   font-size: 12px;
   padding: 6px;
- }
+}
 
 .animation-check {
   background-color: #99E2D0;
@@ -335,15 +334,15 @@ footer > a {
   transition: 0.5s;
 }
 
-.dish-menu:hover > .price-moving-div {
+.dish-menu:hover>.price-moving-div {
   right: 0;
 }
 
-.dish-menu:hover > .animation-check {
+.dish-menu:hover>.animation-check {
   right: 0;
 }
 
-.dish-menu:hover > .animation-check > .check-logo {
+.dish-menu:hover>.animation-check>.check-logo {
   transform: rotate(0deg);
 }
 
@@ -356,12 +355,13 @@ footer > a {
     visibility: visible;
     bottom: -70px;
     opacity: 0;
-    }
+  }
+
   to {
     visibility: visible;
     bottom: 0px;
     opacity: 1;
-    }
+  }
 }
 
 .dish-1 {
@@ -397,4 +397,27 @@ footer > a {
 
 main {
   background-color: #F6F6F6;
+}
+
+.loader {
+  position: fixed;
+  background-color: #ffffff;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  inset: 0;
+  z-index: 2;
+  opacity: 0.9;
+  animation: disappear 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    visibility: hidden;
+  }
 }
